--- a/src/students/templates/students/registration_confirmation.html
+++ b/src/students/templates/students/registration_confirmation.html
@@ -1,4 +1,4 @@
-{% extends 'layouts/box.html' %}
+{% extends 'layouts/student_box.html' %}
 
 {% block title %}Registration Confirmation{% endblock %}
 
