--- a/src/administrators/templates/administrators/student_list.html
+++ b/src/administrators/templates/administrators/student_list.html
@@ -97,7 +97,7 @@
                                             </svg>
                                             {{ student.department.name }}
                                             <span class="ml-1 text-xs px-2 py-0.5 rounded-full bg-blue-50 text-blue-600">
-                                                {% if student.year_group == 1 %}Year One{% else %}Continuing{% endif %}
+                                                Level {{ student.level }}
                                             </span>
                                         </span>
                                     </div>
