--- a/src/administrators/templates/administrators/search.html
+++ b/src/administrators/templates/administrators/search.html
@@ -72,6 +72,9 @@
                                         Department
                                     </th>
                                     <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                                        Level
+                                    </th>
+                                    <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
                                         Payment Status
                                     </th>
                                 </tr>
@@ -87,6 +90,9 @@
                                     </td>
                                     <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
                                         {{ student.department.name }}
+                                    </td>
+                                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
+                                        Level {{ student.level }}
                                     </td>
                                     <td class="px-6 py-4 whitespace-nowrap text-sm">
                                         {% if student.payment %}
