--- a/src/templates/layouts/student_box.html
+++ b/src/templates/layouts/student_box.html
@@ -2,7 +2,7 @@
 
 {% block layout %}
 <content class="block w-full min-h-screen bg-gray-50">
-    <div class="max-w-lg mx-auto md:max-w-2xl lg:max-w-4xl xl:max-w-6xl 2xl:max-w-7xl px-3 py-3 sm:px-4 sm:py-6 md:py-8">
+    <div class="max-w-lg mx-auto md:max-w-2xl lg:max-w-4xl xl:max-w-6xl 2xl:max-w-7xl px-2 sm:px-4 py-2 sm:py-6 md:py-8">
         <div class="bg-white rounded-lg sm:rounded-2xl shadow-sm border border-gray-100 overflow-hidden">
             {% block content %}{% endblock %}
         </div>
